<resources>

    <string name="app_name">ReservaSalasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reserva_de_salas_login">Reserva de Salas - Login</string>
    <string name="email">Email</string>
    <string name="empleado_empresa_com">empleado@empresa.com</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contraseniaDefault">1234</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvide_contrasenia">Olvidé mi Contraseña</string>
    <string name="crear_cuenta">Crear una Cuenta</string>
    <string name="recuperacion_contrasenia">Recuperación de Contraseña</string>
    <string name="contactar_admin">Por motivos de seguridad, contacte al administrador para restablecer su contraseña.</string>
    <string name="volver_al_login">Volver al Login</string>
    <string name="crear_nueva_cuenta">Crear Nueva Cuenta</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="telefono">Teléfono</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="seleccione_sala">Seleccione Sala:</string>
    <string name="fecha_yyyy_mm_dd">Fecha (YYYY-MM-DD)</string>
    <string name="hora_inicio_hh_mm">Hora Inicio</string>
    <string name="hora_fin_hh_mm">Hora Fin</string>
    <string name="bienvenido_empleado">Bienvenido, Empleado</string>
    <string name="reservas">Reservas</string>
    <string name="perfil">Perfil</string>
    <string name="mapa">Mapa</string>
    <string name="reglamento">Reglamento</string>
    <string name="mi_perfil_de_usuario">Mi Perfil de Usuario</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="reservar_una_nueva_sala">Reservar una nueva Sala</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="sala_nombre">Sala Nombre</string>
    <string name="fecha_yyyy_mm_dd_hora_hh_mm_hh_mm">Fecha: [YYYY-MM-DD] | Hora: [HH:MM - HH:MM]</string>
    <string name="estado_activa">Estado: ACTIVA</string>
    <string name="editar">Editar</string>
    <string name="cancelar_reserva">Cancelar Reserva</string>
    <string name="t_tulo_de_la_notificacion">Título de la Notificación</string>
    <string name="detalle_de_la_notificacion">Detalle de la notificación, recordatorio de tu reserva.</string>
    <string name="programada_para">Programada para: --/--/---- --:--</string>
    <string name="manual_de_usuario">Manual de Usuario</string>
    <string name="cuenta">Cuenta</string>
    <string name="abrir_manual_de_usuario_pdf">Abrir Manual de Usuario (PDF)</string>

</resources>