<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="Inicio"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/ic_menu_reservas"
            android:title="@string/reservas" />

        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_mapa"
            android:title="@string/mapa" />

        <item
            android:id="@+id/nav_reglamento"
            android:icon="@drawable/ic_menu_reglamento"
            android:title="@string/manual_de_usuario" />
    </group>

    <item android:title="@string/cuenta">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/perfil" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>
</menu>