<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_nueva_cuenta"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/et_registrar_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_registrar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_registrar_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/telefono"
            android:inputType="phone"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_registrar_contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"/>

    </LinearLayout>
</ScrollView>