<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mi_perfil_de_usuario"
    android:textSize="22sp"
    android:textStyle="bold"
    android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/et_perfil_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_perfil_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_perfil_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:hint="@string/telefono"
        android:inputType="phone"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_perfil_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/guardar_cambios"
            android:textColor="#3E2723"
            tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_perfil_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:backgroundTint="@color/celeste"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
</ScrollView>