<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_notificacion_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/t_tulo_de_la_notificacion"/>

    <TextView
        android:id="@+id/tv_notificacion_detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/detalle_de_la_notificacion"/>

    <TextView
        android:id="@+id/tv_notificacion_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/programada_para"/>

</LinearLayout>