<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccione_sala"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/spinner_salas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_reserva_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:clickable="true"
            android:focusable="false"
            android:cursorVisible="false"
            android:hint="@string/fecha_yyyy_mm_dd"
            android:inputType="date"
            android:maxLines="1"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_hora_inicio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="true"
                android:focusable="false"
                android:cursorVisible="false"
                android:hint="@string/hora_inicio_hh_mm"
                android:inputType="time"
                android:maxLines="1"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_hora_fin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:clickable="true"
                android:focusable="false"
                android:cursorVisible="false"
                android:hint="@string/hora_fin_hh_mm"
                android:inputType="time"
                android:maxLines="1"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>